date sorting done

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body class="text-black">
     <header>
         <h1 class="text-5xl mt-7 font-semibold text-center">AI Universe Hub</h1>
-        <div class="text-center mt-5 hidden">
-            <button onclick="sortByDate()" class="btn hover:bg-red-600 text-white bg-[#EB5757]  normal-case px-7">Sort
+        <div class="text-center mt-5 ">
+            <button onclick="sortByDateButton()" class="btn hover:bg-red-600 text-white bg-[#EB5757]  normal-case px-7">Sort
                 By Date</button>
         </div>
 
