--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <dialog id="my_modal_4" class="modal">
             <form method="dialog" class="modal-box w-11/12 max-w-6xl">
-                <button class="btn btn-sm btn-circle btn-ghost absolute right-0 top-0">✕</button>
+                <button class="btn btn-sm btn-circle bg-red-400 text-white btn-ghost absolute right-2 top-2">✕</button>
                 <!-- main modal card -->
-                <div id="main-modal-card" class="flex md:flex-row flex-col gap-4 p-2">
+                <div id="main-modal-card" class="flex md:flex-row flex-col gap-4 p-10">
 
                 </div>
                 
